--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "parcel start src/index.html --open",
     "build": "parcel build src/index.html",
+    "format": "prettier --write \"src/**/*.{html,scss,js,jsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   "dependencies": {
     "eslint": "^6.8.0",
     "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
